# Project_deltaAnima

./: .gitignore  LogicHandler.py  README.md  Reminh_main.py  edge_client.py  requirements.txt  run_main.sh  setup_servers.py  test_edge.py  test_server_nonlocal.html
MainServerHelper/: Pydantic_frame.py
Persona/: PromptHandler.py  Reminh.py
Persona/RAG/: Fuli_v2.py
customLib/deltaEGO_v2/: deltaEGO.hpp  main.cpp
customLib/deltaEGO_v2/DB/: checking_size.py
customLib/deltaEGO_v2/binding_src/: CMakeLists.txt  deltaEGO.cpp  setup.py
customLib/deltaEGO_v2/binding_src/delta_ego_core.egg-info/: SOURCES.txt
docs/: architecture.md  design-decisions.md  hardware.md  infrastructure.md
docs/components/: README.md  deltaego.md  edge-server.md  orchestrator.md  reminh.md
